<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg1">

<!-- TODO:   不能回车，限制字数-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        tools:ignore="MissingConstraints">

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_collapseMode="pin"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_usermname"

            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/editText_marginTop"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"

            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/realname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/editText_marginTop"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_realname"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="10"


            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/studentnum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/editText_marginTop"
            android:layout_marginEnd="24dp"
            android:inputType="number"
            android:lines="1"
            android:maxLength="13"

            android:hint="@string/prompt_studentnum"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"

            android:background="@drawable/shape"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/editText_marginTop"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_phonenumber"

            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:background="@drawable/shape"
            android:inputType="number"
            android:lines="1"
            android:maxLength="11"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/major"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/editText_marginTop"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_major"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:background="@drawable/shape"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/classname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_high"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/editText_marginTop"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_classname"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:background="@drawable/shape"

            android:inputType="text"
            android:lines="1"
            android:maxLength="20"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:orientation="horizontal"
            android:id="@+id/gender">

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:background="@drawable/shape"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_marginStart="20dp"
                android:text="@string/female" />

        </RadioGroup>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>